--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,6 @@ header{
 }
 
 /* Sidebar Styles */
-
 .sidebar-nav {
     position: absolute;
     top: 0;
@@ -121,17 +120,24 @@ header{
     margin: 0;
     padding: 0;
     list-style: none;
+    background-color: #FF6262;
+    font-family: 'Lato', sans-serif;
+	font-size: 25px;
+	
 }
 
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
+    margin-bottom: 100px;
 }
 
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color:white;
 }
 
 .sidebar-nav li a:hover {
