--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ body {
 
 a{
 	color: #219ab3;
+    color:white;
 }
 
 header{
@@ -129,14 +130,15 @@ header{
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
     color:white;
 }
 
@@ -153,8 +155,9 @@ header{
 
 .sidebar-nav > .sidebar-brand {
     height: 65px;
-    font-size: 18px;
+    font-size: 50px;
     line-height: 60px;
+    color:white;
 }
 
 .sidebar-nav > .sidebar-brand a {
