--- a/css/index.css
+++ b/css/index.css
@@ -114,6 +114,33 @@ header{
 }
 
 /* Sidebar Styles */
+.sidebar-nav-right {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    background-color: #FF6262;
+    font-family: 'Lato', sans-serif;
+    font-size: 25px;
+}
+.sidebar-nav-right li {
+    text-indent: 20px;
+    line-height: 40px;
+    margin-bottom: 10px;
+}
+
+.sidebar-nav-right li a {
+    display: block;
+    text-decoration: none;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
+    color:white;
+}
+
+
 .sidebar-nav {
     position: absolute;
     top: 0;
