--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -139,6 +139,12 @@ hr.small {
     text-decoration: none;
     color: #999;
     color:#fff; /*button colors*/
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+    font-weight: 100;
+    margin-top: 80px;
+    text-align: center;
+    margin-right: 50px;
 }
 
 .sidebar-nav li a:hover {
@@ -160,6 +166,9 @@ hr.small {
 
 .sidebar-nav > .sidebar-brand a {
     color: #999;
+    color:#ed4e6e;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
