--- a/css/portfolio-item.css
+++ b/css/portfolio-item.css
@@ -1,5 +1,24 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+i {
+	margin-top: -20px;
+	margin-left: -40px;
+	color: #ed4e6e;
+}
+
+.navbar-brand{
+	font-family: 'Lato', sans-serif;
+	font-size: 30px;
+	
+}
+
+.navbar{
+	font-family: 'Lato', sans-serif;
+	font-size: 40px;
+    font-weight: 700;
 }
 
 .portfolio-item {
