--- a/Vday/landing/landing/landing-01/css/style.css
+++ b/Vday/landing/landing/landing-01/css/style.css
@@ -1108,13 +1108,27 @@ section * {
   font-size: 20px;
   font-weight: normal;
   color: #2c3e50;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: 'Merriweather', serif;
   margin-bottom: 80px;
   line-height: 42px;
   font-weight: 800;
   letter-spacing: -1px;
 }
+
+.content-7 h4 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: normal;
+  color: #2c3e50;
+  color: #CC0000;
+  font-family: 'Merriweather', serif;
+  font-style: italic;
+  margin-bottom: 80px;
+  line-height: 42px;
+  font-weight: 800;
+  letter-spacing: -1px;
+}
+
 @media (max-width: 767px) {
   .content-7 h3 {
     margin-bottom: 20px;
