capitalized jpg for website

--- a/Vday/landing/landing/landing-01/css/style.css
+++ b/Vday/landing/landing/landing-01/css/style.css
@@ -1687,7 +1687,7 @@ section * {
   filter: alpha(opacity=10);
 }
 .content-23.custom-bg {
-  background-image: url('../../../../images/5.jpg');
+  background-image: url('../../../../images/5.JPG');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
