--- a/Vday/css/the-big-picture.css
+++ b/Vday/css/the-big-picture.css
@@ -15,7 +15,7 @@ body {
 }
 
 .container {
-  margin-left: 750px;
+  margin-left: 100px;
   margin-top: 150px;
 }
 
@@ -32,6 +32,7 @@ body {
   border: none;
   box-shadow: none;
   text-align: left;
+  color: white;
 }
 
 .form-signin {
